[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/bird.png" type="Texture" id=2]
[ext_resource path="res://assets/Animations/AttackLeft.tres" type="Animation" id=3]
[ext_resource path="res://assets/Animations/AttackRight.tres" type="Animation" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.3335, 30.6957 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.3064, 15.4965 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 42.1525, 34.7917 )

[node name="EnemyA" type="KinematicBody2D"]
z_index = 10
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )
speed = Vector2( 100, 500 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -30.959 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0, 1, 0.0627451, 1 )
position = Vector2( 0, -31.446 )
texture = ExtResource( 2 )
hframes = 2

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.72165, -26.7229 )
scale = Vector2( 2.12791, 3.6723 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
modulate = Color( 0.87451, 0, 1, 1 )
position = Vector2( 0, -48.9155 )
monitorable = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 0.582581, -22.6457 )
shape = SubResource( 2 )

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
modulate = Color( 0, 1, 0.415686, 1 )
position = Vector2( -0.291977, -38.5425 )
shape = SubResource( 3 )
disabled = true

[node name="Anim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/AttackLeft = ExtResource( 3 )
anims/AttackRight = ExtResource( 4 )
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
